--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0-beta.42",
+    "material-ui": "^0.20.0",
     "meteor-node-stubs": "^0.3.2",
+    "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-materialize": "^2.2.0",
